--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.18.0",
     "@privy-io/react-auth": "^3.4.0",
     "@privy-io/wagmi": "^2.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.90.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.3.1",
+    "keccak": "^3.0.4",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
+    "prisma": "^6.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
