--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@farcaster/miniapp-sdk": "^0.2.1",
     "@prisma/client": "^6.18.0",
     "@privy-io/react-auth": "^3.4.0",
     "@privy-io/wagmi": "^2.0.1",
