--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.1",
+    "@supabase/supabase-js": "^2.45.4",
     "@prisma/client": "^6.18.0",
     "@privy-io/react-auth": "^3.4.0",
     "@privy-io/wagmi": "^2.0.1",
