--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.1",
-    "@supabase/supabase-js": "^2.45.4",
+    "@neynar/nodejs-sdk": "^3.89.0",
     "@prisma/client": "^6.18.0",
     "@privy-io/react-auth": "^3.4.0",
     "@privy-io/wagmi": "^2.0.1",
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.5.7",
     "@react-email/render": "^1.4.0",
+    "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.90.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
